# Waste-Segregation-Project

./: .gitignore  DATASET_RETRAINING_GUIDE.md  PROJECT_SUMMARY.md  app.py  main.py  pyproject.toml  readme.md  split_val.py
CNN/: __init__.py  dataset.py  model.py  predict.py  train.py  utils.py
YoloV8/: __init__.py  model.py  predict.py  train.py  utils.py
capture/: __init__.py  camera.py
classifier/: __init__.py  ensemble.py
config/: __init__.py  config.yaml
data/: yolo_dataset.yaml
database/: __init__.py  base.py  export.py  factory.py  models.py  mongo_backend.py  sqlite_backend.py
hardware/: __init__.py  bin_config.py  cli.py  controller.py  protocol.py  simulator.py
hardware/firmware/: waste_classifier_firmware.ino
models/: __init__.py
models/CNN/: predict.py  train.py
models/YoloV8/: predict.py
scripts/: prepare_dataset.py
templates/: index.html
utils/: __init__.py  image_processing.py  logger.py
