[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "waste-classifier"
version = "1.0.0"
description = "Intelligent waste segregation system using YOLOV8 + CNN ensemble"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    # Core
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "Pillow>=10.0.0",
    "PyYAML>=6.0",

    # Deep Learning
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "ultralytics>=8.0.0",

    # Database
    "pymongo>=4.5.0",

    # PowerBI Export
    "openpyxl>=3.1.0",
    "pandas>=2.0.0",

    # Utilities
    "matplotlib>=3.7.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
hardware = [
    "pyserial>=3.5",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
waste-classifier = "main:main"

[tool.setuptools.packages.find]
include = [
    "capture*",
    "classifier*",
    "cnn*",
    "config*",
    "database*",
    "hardware*",
    "models*",
    "utils*",
    "yolov8*",
]